<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2">

        <com.facebook.share.widget.LikeView
            android:id="@+id/fb_like_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <me.grantland.widget.AutofitTextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="100sp"
                app:minTextSize="30sp" />

            <com.facebook.login.widget.ProfilePictureView
                android:id="@+id/fb_profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_combat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_combat"
                android:textColor="@color/buttonTextColor"
                app:backgroundTint="#c0800000" />

            <View
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btn_study"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTint="#8000ff00"
                android:text="@string/menu_study"
                android:textColor="@color/buttonTextColor"
                app:backgroundTint="#c0008000" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTint="#80ffff00"
                android:text="@string/menu_setting"
                android:textColor="@color/buttonTextColor"
                app:backgroundTint="#c0808000" />

            <View
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btn_art"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTint="#8000ffff"
                android:text="@string/menu_gallery"
                android:textColor="@color/buttonTextColor"
                app:backgroundTint="#c0008080" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>